--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/athena
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://120.24.220.159:3306/athena
+spring.datasource.username=admin
+spring.datasource.password=2021414XX
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
