--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
