--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,5 @@
-security.key=jalI8HFDSILHFALFy889aaksduy8u3wqkai8y2387wyw4kuryw48r
+security.token.key=jalI8HFDSILHFALFy889aaksduy8u3wqkai8y2387wyw4kuryw48r
+security.token.header=X-AUTHENTICATION
+security.token.prefix=Athena
+#jwt token expriation time / using milsecond
+security.token.expriationtime=864000000
