--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 security.token.key=jalI8HFDSILHFALFy889
 security.token.header=X-AUTHENTICATION
 security.token.prefix=Athena
-#jwt token expriation time / using milsecond
-security.token.expriationtime=864000000
+#jwt token expiration time / using millisecond
+security.token.expirationtime=864000000
