--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
             <version>2.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.stuxuhai</groupId>
+            <artifactId>jpinyin</artifactId>
+            <version>1.1.8</version>
+        </dependency>
     </dependencies>
 
     <build>
