--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <version>3.4</version>
         </dependency>
         <dependency>
+            <groupId>org.jinq</groupId>
+            <artifactId>jinq-jpa</artifactId>
+            <version>1.8.21</version>
+        </dependency>
+        <dependency>
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
             <version>2.5.0</version>
