--- a/src/main/resources/config.properties.example
+++ b/src/main/resources/config.properties.example
@@ -12,3 +12,5 @@ web.url=http://localhost:8080/api/v1
 web.url.prefix=/api/v1
 
 privilege.sequence=SUPERADMIN,ADMIN,READER
+
+copy.status.isDeletable=0,1
