Athena-84 WebSocketMessage Athena-82 DamageHandlerService [Need test]

--- a/src/main/resources/config.properties.example
+++ b/src/main/resources/config.properties.example
@@ -21,3 +21,5 @@ borrow.publication.limit=4
 # use which way to notify admin for system info
 message.system.method=WebSocketMessenger
 message.system.receiver=SUPERADMIN
+message.system.publicationDamageReport.template = static/publication-damage-notification.html
+message.system.publicationDamageReport.title = Publication has been damaged
