--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -63,6 +63,11 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.6-jre</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -122,10 +127,10 @@
             <scope>test</scope>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>com.github.fakemongo</groupId>-->
-            <!--<artifactId>fongo</artifactId>-->
-            <!--<version>2.1.0</version>-->
-            <!--<scope>test</scope>-->
+        <!--<groupId>com.github.fakemongo</groupId>-->
+        <!--<artifactId>fongo</artifactId>-->
+        <!--<version>2.1.0</version>-->
+        <!--<scope>test</scope>-->
         <!--</dependency>-->
         <dependency>
             <groupId>io.springfox</groupId>
