--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -26,6 +26,8 @@
     "angular-in-memory-web-api": "^0.5.4",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "json2typescript": "^1.0.5",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.7",
     "zone.js": "^0.8.20"
   },
