--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -4,10 +4,10 @@ spring.datasource.password=
 spring.datasource.driverClassName=
 
 
-spring.redis.host=
-spring.redis.password=
+spring.redis.host=0.0.0.0
+spring.redis.password=RedisPass
 
-spring.data.mongodb.host=
-spring.data.mongodb.username=
-spring.data.mongodb.password=
-spring.data.mongodb.database=
+spring.data.mongodb.host=0.0.0.0
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=admin
+spring.data.mongodb.database=athena
