--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,7 +1,7 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driverClassName=
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/athena
+spring.datasource.username=dbuser
+spring.datasource.password=dbpass
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 
 spring.redis.host=0.0.0.0
@@ -9,5 +9,5 @@ spring.redis.password=RedisPass
 
 spring.data.mongodb.host=0.0.0.0
 spring.data.mongodb.username=admin
-spring.data.mongodb.password=admin
+spring.data.mongodb.password=adminpassword
 spring.data.mongodb.database=athena
