--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ matrix:
   include:
     - language: java
       before_install:
-        - docker-compose up
+        - docker-compose up -d
+      after_script:
+        - docker-compose down -v
