Add CD/CI pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
-matrix:
-  include:
-    - language: java
-      before_install:
-        - docker-compose up -d
-        - chmod +x mvnw
-      script:
-        - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-        - mvn test -B
-      after_script:
-        - docker-compose down -v
+language: java
+before_install:
+  - docker-compose up -d
+  - cp src/main/resources/config.properties.example src/main/resources/config.properties
+  - cp src/main/resources/application.properties.example src/main/resources/application.properties
+  - chmod +x mvnw
+after_script:
+  - docker-compose down -v
