--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -11,3 +11,11 @@ spring.data.mongodb.host=0.0.0.0
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=adminpassword
 spring.data.mongodb.database=athena
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<Your Mail Id>
+spring.mail.password=<Your Password>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
